[package]
name = "mqtt"
version = "0.1.4"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "MQTT protocol v3 implementation"
documentation = "https://docs.rs/mqtt"
homepage = "https://github.com/flier/rust-mqtt"
repository = "https://github.com/flier/rust-mqtt.git"
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT/Apache-2.0"

[dependencies]
log = "^0.3"
bitflags = "^1.0"
error-chain = "^0.11"
rand = "^0.3"
nom = "^3.0"
byteorder = "^1.1"
slab = "^0.3"
rotor = "^0.6"
bytes = "0.4"

[dev-dependencies]
env_logger = "^0.4"
clap = "^2"
mio = "^0.6"

[lib]
name = "mqtt"

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
test = false

[[example]]
name = "echo_client"
path = "examples/echo_client.rs"
test = false
