[package]
name = "mqtt-core"
version = "0.2.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "MQTT protocol v3 implementation"
documentation = "https://docs.rs/mqtt"
homepage = "https://github.com/flier/rust-mqtt"
repository = "https://github.com/flier/rust-mqtt.git"
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
bitflags = "1.0"
rand = "0.6"
byteorder = "1.3"
nom = { version = "4.2", features = ["verbose-errors"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
pretty_env_logger = "0.3"
matches = "0.1"
criterion = "0.2"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false