[package]
name = "mqtt-packet"
version = "0.2.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "MQTT protocol v3 implementation"
documentation = "https://docs.rs/mqtt"
homepage = "https://github.com/flier/rust-mqtt"
repository = "https://github.com/flier/rust-mqtt.git"
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
bitflags = "1.0"
bytes = "0.5"
num_enum = "0.4"
derive_more = "0.99"
nom = "5"

mqtt-core = { version = "0.2", path = "../mqtt-core" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
