[package]
name = "mqtt-proto"
version = "0.2.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "MQTT protocol v3 implementation"
documentation = "https://docs.rs/mqtt"
homepage = "https://github.com/flier/rust-mqtt"
repository = "https://github.com/flier/rust-mqtt.git"
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT/Apache-2.0"
edition = "2018"

[features]
default = ["packet"]
packet = ["mqtt-packet"]

[dependencies]
log = "0.4"
bytes = "0.5"
# failure = "0.1"
# void = "1.0"
# bytes = "0.5"
# nom = "5"
# slab = "0.4"
# time = "0.1"
# pwhash = "0.3"
# itertools = "0.8"
# serde = "1.0"
# serde_derive = "1.0"
# rand = "0.7"

# futures = "0.1"
# tokio-io = "0.1"
# tokio-core = "0.1"
# tokio-codec = "0.1"
# tokio-proto = "0.1"
# tokio-service = "0.1"

mqtt-core = { version = "0.2", path = "../mqtt-core" }
mqtt-packet = { version = "0.2", path = "../mqtt-packet", optional = true }

[dev-dependencies]
# matches = "0.1"
# lazy_static = "1.3"
# getopts = "0.2"
