[package]
name = "mqtt-sync-client"
version = "0.2.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "MQTT protocol v3 implementation"
documentation = "https://docs.rs/mqtt"
homepage = "https://github.com/flier/rust-mqtt"
repository = "https://github.com/flier/rust-mqtt.git"
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
hexplay = "0.2"
hostname = "0.2"
bytes = "0.5"
time = "0.1"
timer = "0.2"

mqtt-core = { version = "0.2", path = "../mqtt-core" }
mqtt-proto = { version = "0.2", path = "../mqtt-proto" }
mqtt-packet = { version = "0.2", path = "../mqtt-packet" }

[dev-dependencies]
log = "0.4"
pretty_env_logger = "0.3"
structopt = "0.3"
anyhow = "1.0"
url = "2.1"
