[package]
name = "mqtt"
version = "0.2.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "MQTT protocol v3 implementation"
documentation = "https://docs.rs/mqtt"
homepage = "https://github.com/flier/rust-mqtt"
repository = "https://github.com/flier/rust-mqtt.git"
keywords = ["MQTT", "IoT", "messaging"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4"
error-chain = "0.12"
bytes = "0.4"
nom = "4.2"
slab = "0.4"
rotor = "0.6"

mqtt-core = { version = "*", path = "../mqtt-core" }
mqtt-proto = { version = "*", path = "../mqtt-proto" }

[dev-dependencies]
pretty_env_logger = "0.3"
clap = "^2"
mio = "^0.6"
criterion = "0.2"

[[bench]]
name = "topic"
harness = false